--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("https://1.bp.blogspot.com/-q4Fw-qiej1A/Xx8WX11_gGI/AAAAAAAAHWI/7e0zJOcyuKsM61bdtm-OJNl97UPDHW4NwCLcBGAsYHQ/w1200-h630-p-k-no-nu/DESKTOP-WALLPAPER-4K-RICK-AND-MORTY.png")
-    repeat;
+  background: url("https://1.bp.blogspot.com/-q4Fw-qiej1A/Xx8WX11_gGI/AAAAAAAAHWI/7e0zJOcyuKsM61bdtm-OJNl97UPDHW4NwCLcBGAsYHQ/w1200-h630-p-k-no-nu/DESKTOP-WALLPAPER-4K-RICK-AND-MORTY.png") repeat;
   background-attachment: fixed;
   background-size: cover;
   color: rgb(0, 255, 255, 0.747) !important;
